@@ -17,10 +17,52 @@ my %WriteMakefileArgs = (
   "MIN_PERL_VERSION" => "5.010",
   "NAME" => "Dist::Zilla::PluginBundle::Author::OALDERS",
   "PREREQ_PM" => {
+    "Dist::Zilla::Plugin::AutoPrereqs" => 0,
+    "Dist::Zilla::Plugin::CPANFile" => 0,
+    "Dist::Zilla::Plugin::CheckChangesHasContent" => 0,
+    "Dist::Zilla::Plugin::ConfirmRelease" => 0,
+    "Dist::Zilla::Plugin::ContributorsFile" => 0,
+    "Dist::Zilla::Plugin::CopyFilesFromBuild" => 0,
+    "Dist::Zilla::Plugin::ExecDir" => 0,
+    "Dist::Zilla::Plugin::ExtraTests" => 0,
+    "Dist::Zilla::Plugin::Git::Check" => 0,
+    "Dist::Zilla::Plugin::Git::Commit" => 0,
+    "Dist::Zilla::Plugin::Git::Contributors" => 0,
+    "Dist::Zilla::Plugin::Git::GatherDir" => 0,
+    "Dist::Zilla::Plugin::Git::Push" => 0,
+    "Dist::Zilla::Plugin::Git::Tag" => 0,
+    "Dist::Zilla::Plugin::GithubMeta" => 0,
+    "Dist::Zilla::Plugin::InstallGuide" => 0,
+    "Dist::Zilla::Plugin::License" => 0,
+    "Dist::Zilla::Plugin::MAXMIND::TidyAll" => 0,
+    "Dist::Zilla::Plugin::MakeMaker" => 0,
+    "Dist::Zilla::Plugin::Manifest" => 0,
+    "Dist::Zilla::Plugin::ManifestSkip" => 0,
+    "Dist::Zilla::Plugin::MetaJSON" => 0,
+    "Dist::Zilla::Plugin::MetaNoIndex" => 0,
+    "Dist::Zilla::Plugin::MetaResources" => 0,
+    "Dist::Zilla::Plugin::MetaYAML" => 0,
+    "Dist::Zilla::Plugin::MinimumPerl" => 0,
+    "Dist::Zilla::Plugin::PkgVersion" => 0,
+    "Dist::Zilla::Plugin::Pod2Readme" => 0,
+    "Dist::Zilla::Plugin::PodCoverageTests" => 0,
+    "Dist::Zilla::Plugin::PodWeaver" => 0,
+    "Dist::Zilla::Plugin::Prereqs" => 0,
+    "Dist::Zilla::Plugin::PruneCruft" => 0,
+    "Dist::Zilla::Plugin::ReadmeAnyFromPod" => 0,
+    "Dist::Zilla::Plugin::ShareDir" => 0,
+    "Dist::Zilla::Plugin::Test::CPAN::Changes" => 0,
+    "Dist::Zilla::Plugin::Test::PodSpelling" => 0,
+    "Dist::Zilla::Plugin::Test::Synopsis" => 0,
+    "Dist::Zilla::Plugin::Test::TidyAll" => 0,
+    "Dist::Zilla::Plugin::TestRelease" => 0,
+    "Dist::Zilla::Plugin::TravisCI::StatusBadge" => 0,
+    "Dist::Zilla::Plugin::UploadToCPAN" => 0,
     "Dist::Zilla::Role::PluginBundle::Easy" => 0,
     "Dist::Zilla::Role::PluginBundle::PluginRemover" => 0,
     "List::AllUtils" => 0,
     "Moose" => 0,
+    "Pod::Elemental::Transformer::List" => 0,
     "Types::Path::Tiny" => 0,
     "Types::Standard" => 0,
     "feature" => 0,
@@ -43,6 +85,47 @@ my %WriteMakefileArgs = (
 
 
 my %FallbackPrereqs = (
+  "Dist::Zilla::Plugin::AutoPrereqs" => 0,
+  "Dist::Zilla::Plugin::CPANFile" => 0,
+  "Dist::Zilla::Plugin::CheckChangesHasContent" => 0,
+  "Dist::Zilla::Plugin::ConfirmRelease" => 0,
+  "Dist::Zilla::Plugin::ContributorsFile" => 0,
+  "Dist::Zilla::Plugin::CopyFilesFromBuild" => 0,
+  "Dist::Zilla::Plugin::ExecDir" => 0,
+  "Dist::Zilla::Plugin::ExtraTests" => 0,
+  "Dist::Zilla::Plugin::Git::Check" => 0,
+  "Dist::Zilla::Plugin::Git::Commit" => 0,
+  "Dist::Zilla::Plugin::Git::Contributors" => 0,
+  "Dist::Zilla::Plugin::Git::GatherDir" => 0,
+  "Dist::Zilla::Plugin::Git::Push" => 0,
+  "Dist::Zilla::Plugin::Git::Tag" => 0,
+  "Dist::Zilla::Plugin::GithubMeta" => 0,
+  "Dist::Zilla::Plugin::InstallGuide" => 0,
+  "Dist::Zilla::Plugin::License" => 0,
+  "Dist::Zilla::Plugin::MAXMIND::TidyAll" => 0,
+  "Dist::Zilla::Plugin::MakeMaker" => 0,
+  "Dist::Zilla::Plugin::Manifest" => 0,
+  "Dist::Zilla::Plugin::ManifestSkip" => 0,
+  "Dist::Zilla::Plugin::MetaJSON" => 0,
+  "Dist::Zilla::Plugin::MetaNoIndex" => 0,
+  "Dist::Zilla::Plugin::MetaResources" => 0,
+  "Dist::Zilla::Plugin::MetaYAML" => 0,
+  "Dist::Zilla::Plugin::MinimumPerl" => 0,
+  "Dist::Zilla::Plugin::PkgVersion" => 0,
+  "Dist::Zilla::Plugin::Pod2Readme" => 0,
+  "Dist::Zilla::Plugin::PodCoverageTests" => 0,
+  "Dist::Zilla::Plugin::PodWeaver" => 0,
+  "Dist::Zilla::Plugin::Prereqs" => 0,
+  "Dist::Zilla::Plugin::PruneCruft" => 0,
+  "Dist::Zilla::Plugin::ReadmeAnyFromPod" => 0,
+  "Dist::Zilla::Plugin::ShareDir" => 0,
+  "Dist::Zilla::Plugin::Test::CPAN::Changes" => 0,
+  "Dist::Zilla::Plugin::Test::PodSpelling" => 0,
+  "Dist::Zilla::Plugin::Test::Synopsis" => 0,
+  "Dist::Zilla::Plugin::Test::TidyAll" => 0,
+  "Dist::Zilla::Plugin::TestRelease" => 0,
+  "Dist::Zilla::Plugin::TravisCI::StatusBadge" => 0,
+  "Dist::Zilla::Plugin::UploadToCPAN" => 0,
   "Dist::Zilla::Role::PluginBundle::Easy" => 0,
   "Dist::Zilla::Role::PluginBundle::PluginRemover" => 0,
   "File::Spec" => 0,
@@ -50,6 +133,7 @@ my %FallbackPrereqs = (
   "IPC::Open3" => 0,
   "List::AllUtils" => 0,
   "Moose" => 0,
+  "Pod::Elemental::Transformer::List" => 0,
   "Test::More" => 0,
   "Types::Path::Tiny" => 0,
   "Types::Standard" => 0,
