@@ -1,7 +1,49 @@
+requires "Dist::Zilla::Plugin::AutoPrereqs" => "0";
+requires "Dist::Zilla::Plugin::CPANFile" => "0";
+requires "Dist::Zilla::Plugin::CheckChangesHasContent" => "0";
+requires "Dist::Zilla::Plugin::ConfirmRelease" => "0";
+requires "Dist::Zilla::Plugin::ContributorsFile" => "0";
+requires "Dist::Zilla::Plugin::CopyFilesFromBuild" => "0";
+requires "Dist::Zilla::Plugin::ExecDir" => "0";
+requires "Dist::Zilla::Plugin::ExtraTests" => "0";
+requires "Dist::Zilla::Plugin::Git::Check" => "0";
+requires "Dist::Zilla::Plugin::Git::Commit" => "0";
+requires "Dist::Zilla::Plugin::Git::Contributors" => "0";
+requires "Dist::Zilla::Plugin::Git::GatherDir" => "0";
+requires "Dist::Zilla::Plugin::Git::Push" => "0";
+requires "Dist::Zilla::Plugin::Git::Tag" => "0";
+requires "Dist::Zilla::Plugin::GithubMeta" => "0";
+requires "Dist::Zilla::Plugin::InstallGuide" => "0";
+requires "Dist::Zilla::Plugin::License" => "0";
+requires "Dist::Zilla::Plugin::MAXMIND::TidyAll" => "0";
+requires "Dist::Zilla::Plugin::MakeMaker" => "0";
+requires "Dist::Zilla::Plugin::Manifest" => "0";
+requires "Dist::Zilla::Plugin::ManifestSkip" => "0";
+requires "Dist::Zilla::Plugin::MetaJSON" => "0";
+requires "Dist::Zilla::Plugin::MetaNoIndex" => "0";
+requires "Dist::Zilla::Plugin::MetaResources" => "0";
+requires "Dist::Zilla::Plugin::MetaYAML" => "0";
+requires "Dist::Zilla::Plugin::MinimumPerl" => "0";
+requires "Dist::Zilla::Plugin::PkgVersion" => "0";
+requires "Dist::Zilla::Plugin::Pod2Readme" => "0";
+requires "Dist::Zilla::Plugin::PodCoverageTests" => "0";
+requires "Dist::Zilla::Plugin::PodWeaver" => "0";
+requires "Dist::Zilla::Plugin::Prereqs" => "0";
+requires "Dist::Zilla::Plugin::PruneCruft" => "0";
+requires "Dist::Zilla::Plugin::ReadmeAnyFromPod" => "0";
+requires "Dist::Zilla::Plugin::ShareDir" => "0";
+requires "Dist::Zilla::Plugin::Test::CPAN::Changes" => "0";
+requires "Dist::Zilla::Plugin::Test::PodSpelling" => "0";
+requires "Dist::Zilla::Plugin::Test::Synopsis" => "0";
+requires "Dist::Zilla::Plugin::Test::TidyAll" => "0";
+requires "Dist::Zilla::Plugin::TestRelease" => "0";
+requires "Dist::Zilla::Plugin::TravisCI::StatusBadge" => "0";
+requires "Dist::Zilla::Plugin::UploadToCPAN" => "0";
 requires "Dist::Zilla::Role::PluginBundle::Easy" => "0";
 requires "Dist::Zilla::Role::PluginBundle::PluginRemover" => "0";
 requires "List::AllUtils" => "0";
 requires "Moose" => "0";
+requires "Pod::Elemental::Transformer::List" => "0";
 requires "Types::Path::Tiny" => "0";
 requires "Types::Standard" => "0";
 requires "feature" => "0";
