@@ -4,7 +4,7 @@ license = Perl_5
 main_module = lib/Dist/Zilla/PluginBundle/Author/OALDERS.pm
 copyright_holder = Olaf Alders
 copyright_year   = 2016
-version = 0.000005
+version = 0.000006
 
 [@Author::OALDERS]
 
