@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-PluginBundle-Author-OALDERS
 
 {{$NEXT}}
+    - Explicitly use all plugins so that they're added to the cpanfile.
 
 0.000005  2016-07-26 19:01:55-04:00 America/Toronto
     - Fix encoding of stopwords.
